Fix for link to slides not showing up

--- a/style.css
+++ b/style.css
@@ -63,9 +63,11 @@ rect.active {
 }
 
 #link-to-slides {
+    background: #4a4a4a;
     display: flex;
     justify-content: center;
-    background: #4a4a4a;
+    position: relative;
+    top: -50px;
 }
 
 #link-to-slides a {
